# MatX

./: CMakeLists.txt
bench/: CMakeLists.txt
cmake/: FindcuTENSOR.cmake  FindcuTensorNet.cmake  GetCUTLASS.cmake
docs_input/notebooks/exercises/: example4_tpc.cu
examples/: CMakeLists.txt  fft_conv.cu  resample.cu  simple_radar_pipeline.h
include/: matx_matmul.h
include/matx/core/: file_io.h  half_complex.h  pybind.h  tensor_impl.h  type_utils.h
include/matx/kernels/: conv.cuh
include/matx/operators/: hermitian.h  operators.h  rmax.h  scalar_ops.h  sum.h  unary_operators.h
include/matx/transforms/: ambgfun.h  einsum.h  matmul.h  qr.h  svd.h
test/: CMakeLists.txt
test/00_io/: FileIOTests.cu
test/00_operators/: GeneratorTests.cu  OperatorTests.cu
test/00_transform/: MatMul.cu
test/00_transform/matmul/small_rect/: bf16.cu  complex_bf16.cu  complex_double.cu  complex_float.cu  complex_fp16.cu  double.cu  float.cu  fp16.cu
test/00_transform/matmul/small_rect_a_transpose/: bf16.cu  complex_bf16.cu  complex_double.cu  complex_float.cu  complex_fp16.cu  double.cu  float.cu  fp16.cu
test/include/: test_types.h
test/test_vectors/generators/: 00_transforms.py
